--- a/styles/signup.css
+++ b/styles/signup.css
@@ -5,8 +5,21 @@
 }
 div {
   /* border: 1px solid; */
-  margin: auto;
+  /* margin: auto; */
   text-align: center;
+}
+#error {
+  height: 50px;
+  border: 1px solid red;
+  width: 90%;
+  margin-bottom: 10px;
+  background-color: #ff3860;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  /* visibility: hidden; */
+  display: none;
 }
 div > img {
   width: 8%;
@@ -16,10 +29,15 @@ form {
   /* height: 400px; */
   /* border: 1px solid; */
   margin: auto;
-  padding-left: 20px;
+  padding-left: 30px;
+  /* justify-content: center; */
+  /* align-items: center; */
   padding-bottom: 20px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  display: flex;
+  flex-direction: column;
 }
+
 input {
   padding: 10px;
   width: 90%;
@@ -35,4 +53,7 @@ p,
 h1 {
   text-align: center;
   width: 90%;
+}
+h1 {
+  margin-bottom: 30px;
 }
