--- a/styles/category.css
+++ b/styles/category.css
@@ -1,68 +1,140 @@
-#Products_data{
-    display: flex;
+#Products_data {
+  display: flex;
+  /* width: 20%; */
+}
+#header {
+  height: 100px;
+}
+#all_filters {
+  width: 18%;
+  /* padding: 0 10px; */
 
+  /* border: 1px solid green; */
 }
-#all_filters{
-    width: 25%;
-    /* padding: 0 10px; */
-    position: sticky;
-    top: 10px;
-    
-    /* border: 1px solid green; */
+#all_filters > * {
+  margin: 0 10px 10px 10px;
+  padding: 5px;
+  border: solid #e9e9ed 1px;
 }
-#all_filters>*{
-    margin: 0 10px 10px 0;
-    border: solid #e9e9ed 1px;
+#all_filters > * > * {
+  margin: 5px;
 }
-#all_filters>*>*{
-    margin: 5px;
+#all_filters span,
+input:hover {
+  cursor: pointer;
 }
-#all_filters span,input:hover{
-cursor: pointer;
-}
-#brand{
-    border: solid #e9e9ed 1px;
-    
-}
-
-img{
-    display: block;
-    /* height: 50%; */
-    width: 100%;
+#brand {
+  border: solid #e9e9ed 1px;
 }
 
+img {
+  display: block;
+  /* height: 50%; */
+  width: 100%;
+}
 
-#data{
-    /* border: 1px solid red; */
-    /* width: 70%; */
-    display: grid;
-    grid-template-columns: repeat(4, 1.5fr);
-    grid-template-rows: repeat(5, auto);
-    gap: 15px;
+#data {
+  /* border: 1px solid red; */
+  /* width: 70%; */
+  display: grid;
+  grid-template-columns: repeat(4, 1.5fr);
+  grid-template-rows: repeat(5, auto);
+  gap: 15px;
 }
-.prices{
-    display: flex;
-    width: 70%;
-    justify-content: space-between;
-    
+.prices {
+  display: flex;
+  width: 70%;
+  justify-content: space-between;
 }
-.prices>*{
-    margin: 0;
+.prices > * {
+  margin: 0;
+}
+.card > *:not(:first-child) {
+  padding: 5px;
+}
+.card:hover {
+  /* border: 1px solid green; */
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  cursor: pointer;
+}
+input[type="button"] {
+  /* accent-color: green; */
+  border: 1px solid blue;
+  border-radius: 50%;
+  /* width: 2px; */
+  height: 15px;
+  padding-left: 5px;
+}
 
+input[type*="radio"] {
+  margin-right: 5px;
 }
-.card>*:not(:first-child){
-padding: 5px;
+
+/* The container */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 22px;
+  /* margin-bottom: 12px; */
+  cursor: pointer;
+  /* font-size: 22px; */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-.card:hover{
-    /* border: 1px solid green; */
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    cursor: pointer;
+
+/* Hide the browser's default radio button */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
 }
-input[type='button']{
-    /* accent-color: green; */
-    border: 1px solid blue;
-    border-radius: 50%;
-    /* width: 2px; */
-    height: 15px;
-    padding-left: 5px;
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 15px;
+  width: 15px;
+  background-color: #eee;
+  border-radius: 50%;
+  margin-top: 4px;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #2196f3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+  top: 5px;
+  left: 5px;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background: white;
+}
+
+span {
+  font-size: 13px;
 }
