--- a/styles/category.css
+++ b/styles/category.css
@@ -7,10 +7,14 @@
 }
 #all_filters {
   width: 18%;
+  position: relative;
+  position: fixed;
+  /* top: 10px; */
   /* padding: 0 10px; */
 
   /* border: 1px solid green; */
 }
+
 #all_filters > * {
   margin: 0 10px 10px 10px;
   padding: 5px;
@@ -36,6 +40,7 @@ img {
 #data {
   /* border: 1px solid red; */
   /* width: 70%; */
+  margin-left: 18%;
   display: grid;
   grid-template-columns: repeat(4, 1.5fr);
   grid-template-rows: repeat(5, auto);
